--- a/style.css
+++ b/style.css
@@ -105,3 +105,19 @@ header {
 .banner-photo img:hover {
   transform: scale(1.2);
 }
+.company {
+  min-height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  padding: 50px 3%;
+  border-top: 2px solid #f4f4f4;
+  border-bottom: 2px solid #f4f4f4;
+}
+.company .company-logo {
+  width: 150px;
+}
+.company .company-logo img {
+  width: 80%;
+}
